--- a/index.html
+++ b/index.html
@@ -5,27 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/main.js"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <div class="center">
-        <div class="fb">
-            <img src="img/Facebook-Logo.wine.svg" alt="">
-            <p>Facebook helps you connect and share with  everyone in your life.</p>
+    <div class="container main">
+        <div class="row">
+            <div class="col-md-7">
+                <img class="logo" width="60%" src="img/Facebook-Logo.wine.svg" alt="">
+                <h3 class="head_text">Facebook tanıdıklarınla iletişim kurmanı <br>
+                    ve hayatında olup bitenleri paylaşmanı <br> sağlar.</h3>
+            </div>
+            <div class="col-md-5 rght">
+                <div class="center">
+                    <label for="exampleInputEmail1"></label>
+                <input type="email" class=" email form-control " id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter email">
+                <label for="exampleInputPassword1"></label>
+                <input onclick="inputTouch()"   type="password" class="  psw form-control  " id="pswInput" placeholder="Password">
+                <i onclick="pswFunction()"  id="eye1"  class=" eye fa fa-eye" aria-hidden="true"></i>
+                <button class=" sgn_button btn btn-primary">Login</button> <br>
+                <a class="mb-4 link" href="#">Did you forget your password?</a>
+                
+                <button class=" psw_button btn btn-success">Create New Account</button>
+                </div>
+            </div>
         </div>
-        <div class="main">
-            <form action="" class="frm">
-                <input type="text" placeholder="Mail or Phone Number"> <br>
-                <input type="password" placeholder="password"> <br>
-                <button class="login">log in</button> <br>
-                <a href="#" class="fyp">Forgot your password?</a> <br>
-                <a href="#" class="or">or</a><br>
-                <button class="cna">Create a New Account</button>
-            </form>
-        </div>
-
+    </div>
     </div>
 </body>
 
